# Pyckles

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.github_actions.txt  requirements.readthedocs.txt  requirements.travis.txt  setup.py
.github/: dependabot.yml
.github/workflows/: publish_pypi.yml
docs/: Makefile  codemeta.json  make.bat
docs/joss_paper/: paper.md
docs/source/: catalogues.rst  conf.py  index.rst
docs/source/reference/: modules.rst  pyckles.rst  pyckles.spectral_library.rst  pyckles.tests.rst  pyckles.tests.test_SpectralLibrary.rst  pyckles.tests.test_utils.rst  pyckles.utils.rst
pyckles/: __init__.py  core.py  spectral_library.py  utils.py  version.py
pyckles/tests/: test_SpectralLibrary.py  test_core.py  test_spectral_library.py  test_utils.py
