[tool.poetry]
name = "Pyckles"
version = "0.4.1"
description = "Simple interface to the Pickles 1998 stellar spectra catalogue"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Kieran Leschinski <kieran.leschinski@unive.ac.at>"]
maintainers = [
    "Kieran Leschinski <kieran.leschinski@unive.ac.at>",
    "Hugo Buddelmeijer <hugo@buddelmeijer.nl>",
    "Fabian Haberhauer <fabian.haberhauer@univie.ac.at>",
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
repository = "https://github.com/AstarVienna/Pyckles/"
documentation = "https://pyckles.readthedocs.io/"


[tool.poetry.dependencies]
python = "^3.10"
astropy = "^6.0.1"
pooch = "^1.8.2"

synphot = { version = "^1.4.0", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
numpy = "^1.26.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-book-theme = "^1.1.0"
sphinxcontrib-apidoc = "^0.4.0"
numpy = "^1.26.3"
numpydoc = "^1.6.0"
matplotlib = "^3.8.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/AstarVienna/Pyckles/issues"

[tool.poetry.extras]
syn = ["synphot"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]

[tool.coverage.report]
omit = ["pyckles/tests/*"]
