[project]
name = "Pyckles"
version = "0.5.0"
description = "Simple interface to the Pickles 1998 stellar spectra catalogue."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@univie.ac.at"}
]
maintainers = [
    { name = "Kieran Leschinski", email = "kieran.leschinski@univie.ac.at" },
    { name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl" },
    { name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at" },
]
keywords = [ "astronomy" ]
dynamic = [ "classifiers" ]
requires-python = ">=3.10,<3.14"
dependencies = [
    "astropy (>=6.1.7,<8.0.0)",
    "pooch (>=1.8.2,<2.0.0)",
]

[project.optional-dependencies]
syn = [ "synphot>=1.5.0,<2.0.0" ]

[project.urls]
Repository = "https://github.com/AstarVienna/Pyckles/"
Documentation = "https://pyckles.readthedocs.io/"
"Bug Tracker" = "https://github.com/AstarVienna/Pyckles/issues"
Changelog = "https://github.com/AstarVienna/skycalc_ipy/releases"


[tool.poetry]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
numpy = ">=1.26.4, <2.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.3, <8.0"
sphinx-book-theme = "^1.1.0"
sphinxcontrib-apidoc = ">=0.4,<0.7"
numpy = "^2.1.3"
numpydoc = "^1.6.0"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]

[tool.coverage.report]
omit = ["pyckles/tests/*"]
